# machine_learning_cloud

./: .gitignore  Concordance_20180328.csv  Concordance_20180328.xls  Gather Technologies- Map to Broader Tag.xls  add_vector_columns.sql  api.yaml  create_bag_of_words.sql  create_candidate_set_groups_table.sql  create_candidate_set_table.sql  create_last_ingest_table.sql  create_patent_vectors_table.sql  create_raw_patents_table.sql  etsi_2g_filter.xls  functions.sql  gtt-server.service  invalid_ticker_companies.txt  invalid_ticker_pairs.txt  patentWordsSchema.sql  patent_law.txt  pom.xml  project-box.sh  setup.sh  unvaluable_patents.csv  valuable_patents.csv
help/: help_template.html
lib/HDFJava/3.3.2/share/HDFJNIExamples-0.1.1-Source/: CMakeLists.txt  CTestConfig.cmake
lib/HDFJava/3.3.2/share/HDFJNIExamples-0.1.1-Source/config/cmake/: CTestCustom.cmake  UseJava.cmake  cacheinit.cmake  grepTest.cmake  runTest.cmake
lib/HDFJava/3.3.2/share/HDFJNIExamples-0.1.1-Source/jnative/: CMakeLists.txt
lib/HDFJava/3.3.2/share/HDFJNIExamples-0.1.1-Source/jnative/h4/: CMakeLists.txt  HDF4DatasetCreate.java  HDF4FileCreate.java  HDF4GroupCreate.java
lib/HDFJava/3.3.2/share/HDFJNIExamples-0.1.1-Source/jnative/h5/: CMakeLists.txt  HDF5AttributeCreate.java  HDF5DatasetCreate.java  HDF5DatasetRead.java  HDF5FileCreate.java  HDF5FileStructure.java  HDF5GroupCreate.java  HDF5SubsetSelect.java
public/: 500.html
public/css/: codemirror.css  defaults.css  jquery.dynatable.css  multiselect.css
public/js/: close_brackets.js  defaults.js  drilldown.js  jstree.misc.js  multiselect.js  offline-exporting.js
scripts/: mini-server-script.sh  setup.sh  sim_vectors.sql  update_ai_from_local.sh
scripts/production/: backup.sh  compdb_gather.sh  cpc-runner.sh  cpc-to-word-neural-net.sh  docker-compose.yml  elasticsearch-no-filings.sh  elasticsearch-no-init.sh  elasticsearch.sh  ingest-computable.sh  ingest.sh  keyword-graph.sh  keyword-runner.sh  my_elasticsearch.sh  paragraph-vectors.sh  reingest-all.sh  rerun-models.sh  setup-no-start.sh  setup.sh  start.sh  update-value-models.sh  update.sh  update_cpc_similarity.sh  update_elasticsearch.sh  update_postgres_monthly.sh  update_postgres_weekly.sh  update_similarity.sh  update_wipo.sh
scripts/proxmox/: docker-compose.yml  recreate_elasticsearch.sh  run-elasticsearch-instance.sh  update_similarity.sh  update_wipo.sh
scripts/staging/: Dockerfile  docker-compose.yml  setup.sh
src/: StupidTest.java
src/ai_db_updater/: ConstructAssigneeToPatentsMap.java  IngestGoogleXML.java  IngestUPTOData.java  IngestUSPTOData.java  UpdateAll.java  UpdateAssigneeObjectMaps.java  UpdateAssignmentData.java  UpdateClaimScoreData.java  UpdateClassCodeToClassTitleMap.java  UpdateClassificationHash.java  UpdateItemToIndexMap.java  UpdateMaintenanceFeeData.java  UpdateParagraphTokensTable.java  UpdatePatentApplicationData.java  UpdatePatentGrantData.java  UpdatePatentsAndApplicationsTable.java
src/analysis/: AbstractPatent.java  AutoEncoderIterator.java  AutoEncoderModel.java  BOWIterator.java  Classification.java  GroupedSimilarPatentFinder.java  KMeanAlgorithm.java  KMeansCalculator.java  PCAModel.java  PCAPatent.java  Patent.java  SimilarPatentFinder.java  SpectralHashModel.java  TestCompDB.java  WordFrequencyPair.java
src/api/: API.java  ClaimsProcessor.java  EPO.java  PatentDB2.java
src/assignee_normalization/: AssigneeTrimmer.java  NormalizeAssignees.java
src/citation_graph/: CitationPageRank.java  PageRankHelper.java  SimRankHelper.java
src/classification_models/: WIPOHelper.java
src/client_projects/: AssigneePortfolioAnalysis.java  MicrosoftSEPProject.java  PatentDateAnalysis.java  SIE.java
src/compdb_adapter/: CreateCompDBAssigneeTransactionData.java
src/cpc_normalization/: CPC.java  CPCCleaner.java  CPCHierarchy.java
src/crunchbase_api/: PullDataForCompany.java
src/epo/: MergeEPOMaps.java  (+1 more)
(+2184 files in other folders)
